--- a/index.html
+++ b/index.html
@@ -34,10 +34,20 @@
 
 ### 项目经历
 
-* 2015/7-2015/8 -- viewPic   
+* viewPic   
   项目地址 : [https://github.com/liuxiaoceng/viewPic](https://github.com/liuxiaoceng/viewPic)  
   项目描述 : 一个本地图片浏览器，给你幻灯片的阅读体验  
+  使用技能 : HTML, CSS, JS, 把面向对象的思想融入到 js 中, 封装类似 JQuery 的 $ 方法
 
+* mdResume  
+  项目地址 : [https://github.com/liuxiaoceng/mdResume](https://github.com/liuxiaoceng/mdResume)  
+  项目描述 : 使用 Markdown 制作个人简历  
+  使用技能 : HTML, CSS, JS 以及 marked 插件的使用
+
+* countdown
+  项目地址 : [https://github.com/liuxiaoceng/countdown](https://github.com/liuxiaoceng/countdown)  
+  项目描述 :  使用 canvas 实现一款酷炫的倒计时web应用  
+  使用技能 : HTML,CSS,JS,JQuery以及 canvas API
 
 ### 个人荣誉
 
@@ -83,6 +93,7 @@
             return html;
           })
           eMdHtml.html(tMdHtml);
+          $('a').attr("target","_blank");
         } else {
           eMdHtml.html("<h2>暂时没有内容</h2>")
         }
