--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 * 电子邮箱 : liuxiaoceng@hotmail.com
 * Github 地址 : [https://github.com/liuxiaoceng](https://github.com/liuxiaoceng)
 
-![my picture](me.png)
+![my picture](images/me.png)
 
 ### 个人技能
 
