add person page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 * 学历 : 西安邮电大学  软件工程（本科）  2012级  
 * 手机号码 : 13659186294  
 * 电子邮箱 : liuxiaoceng@hotmail.com
+* 个人主页 : [http://liuxiaoceng.github.io/](http://liuxiaoceng.github.io/)
 * Github 地址 : [https://github.com/liuxiaoceng](https://github.com/liuxiaoceng)
 
 ![my picture](images/me.png)
