--- a/index.html
+++ b/index.html
@@ -37,16 +37,19 @@
 
 * viewPic   
   项目地址 : [https://github.com/liuxiaoceng/viewPic](https://github.com/liuxiaoceng/viewPic)  
+  在线访问 : [http://liuxiaoceng.github.io/viewPic/](http://liuxiaoceng.github.io/viewPic/)  
   项目描述 : 一个本地图片浏览器，给你幻灯片的阅读体验  
   使用技能 : HTML, CSS, JS, 把面向对象的思想融入到 js 中, 封装类似 JQuery 的 $ 方法
 
 * mdResume  
   项目地址 : [https://github.com/liuxiaoceng/mdResume](https://github.com/liuxiaoceng/mdResume)  
+  在线访问 : [http://liuxiaoceng.github.io/mdResume/](http://liuxiaoceng.github.io/mdResume/)  
   项目描述 : 使用 Markdown 制作个人简历  
   使用技能 : HTML, CSS, JS 以及 marked 插件的使用
 
 * countdown
   项目地址 : [https://github.com/liuxiaoceng/countdown](https://github.com/liuxiaoceng/countdown)  
+  在线访问 : [http://liuxiaoceng.github.io/countdown/](http://liuxiaoceng.github.io/countdown/)  
   项目描述 :  使用 canvas 实现一款酷炫的倒计时web应用  
   使用技能 : HTML,CSS,JS,JQuery以及 canvas API
 
