--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 
 ### 个人技能
 
-* 熟练使用 HTML、CSS 进行网页设计,对内容和表现的分离有深刻理解
-* 熟悉 Javascript 、JSON, 掌握 Ajax 异步通信技术  
+* 熟练使用 HTML、CSS 进行网页设计,对内容和表现的分离有深刻理解  
+* 熟练使用 JavaScript 对网页进行动态操纵, 会使用 ajax 与后端通过 json 进行数据交互  
 * 可熟练使用 jquery 库进行开发  
-* 了解 Web 标准、语义化相关概念，处理简单的浏览器兼容问题  
+* 了解 HTML5, CSS 3, 对 Web 标准、语义化相关概念有一定的理解  
 * 熟悉 C 语言与数据结构相关概念以及算法  
 * 熟悉 Mysql 数据库相关的基本概念以及相关操作(查询、删除、更新)等  
-* 会使用 git, 使用 github 进行项目托管 
+* 会使用 git 进行版本控制, 使用 github 进行项目托管 
+* 英语已达国家四六级标准，对英文文献有一定的阅读能力    
 
 ### 项目经历
 
@@ -116,7 +117,7 @@
             top: "1005px"
           });
 
-          $($(".md-html h4+ul+h3")).css("margin-top", "160px");          
+          $($(".md-html h4+ul+h3")).css("margin-top", "130px");          
         } else {
           eMdHtml.html("<h2>暂时没有内容</h2>")
         }
