--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
   项目地址 : [https://github.com/liuxiaoceng/mdResume](https://github.com/liuxiaoceng/mdResume)  
   在线访问 : [http://liuxiaoceng.github.io/mdResume/](http://liuxiaoceng.github.io/mdResume/)  
   项目描述 : 使用 Markdown 制作个人简历  
-  使用技能 : HTML, CSS, JS 以及 marked 插件的使用
+  使用技能 : HTML, CSS, JS, Jquery 以及 marked 插件的使用
 
 * countdown  
   项目地址 : [https://github.com/liuxiaoceng/countdown](https://github.com/liuxiaoceng/countdown)  
   在线访问 : [http://liuxiaoceng.github.io/countdown/](http://liuxiaoceng.github.io/countdown/)  
   项目描述 :  使用 canvas 实现一款酷炫的倒计时web应用  
-  使用技能 : HTML,CSS,JS,JQuery以及 canvas API
+  使用技能 : HTML, CSS, JS 以及 canvas API
 
 ### 个人荣誉
 
